# ComfyUI-Bringing-Old-Photos-Back-to-Life

./: .gitignore  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  run.py
Face_Detection/: align_warp_back_multiple_dlib.py  detect_all_dlib.py
Face_Enhancement/: test_face.py
Face_Enhancement/data/: base_dataset.py  custom_dataset.py  face_dataset.py  pix2pix_dataset.py
Face_Enhancement/models/: __init__.py  pix2pix_model.py
Face_Enhancement/models/networks/: __init__.py  architecture.py  encoder.py  generator.py  normalization.py
Face_Enhancement/options/: base_options.py  test_options.py
Face_Enhancement/util/: util.py  visualizer.py
Global/: detection.py  test.py  train_mapping.py
Global/data/: base_dataset.py  online_dataset_for_old_photos.py
Global/detection_util/: util.py
Global/models/: NonLocal_feature_mapping_model.py  base_model.py  mapping_model.py  models.py
Global/options/: base_options.py  test_options.py
