[project]
name = "bringing-old-photos-back-to-life"
description = "Bringing Old Photos Back to Life in ComfyUI. Enhance old or low-quality images in ComfyUI. Optional features include automatic scratch removal and face enhancement. Requires installing a number of small checkpoints and VAEs. Based on microsoft/Bringing-Old-Photos-Back-to-Life."
version = "1.1.0"
license = "LICENSE"
dependencies = ["cmake", "dlib==19.24.1", "easydict", "matplotlib", "opencv-python", "scikit-image", "scipy"]

[project.urls]
Repository = "https://github.com/cdb-boop/ComfyUI-Bringing-Old-Photos-Back-to-Life"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cdb-boop"
DisplayName = "ComfyUI-Bringing-Old-Photos-Back-to-Life"
Icon = ""
